--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vusic",
+  "name": "musicon",
   "homepage": "http://vusic.techstore.dev/",
   "version": "0.1.0",
   "private": true,
